[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/white_texture.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Big.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/menu.tres" type="DynamicFont" id=3]
[ext_resource path="res://Main/GUI/GameOverScreen.gd" type="Script" id=4]
[ext_resource path="res://Assets/Audio/Music/bipbipbip.wav" type="AudioStream" id=5]

[node name="GameOverScreen" type="Node2D"]
script = ExtResource( 4 )

[node name="bg" type="Sprite" parent="."]
modulate = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
position = Vector2( 515.115, 302.528 )
scale = Vector2( 1.61647, 1.6948 )
texture = ExtResource( 1 )

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="GUILayer"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -135.0
margin_right = 135.0
custom_fonts/font = ExtResource( 3 )
text = "GameOver"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUILayer"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -150.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RunTimeLabel" type="Label" parent="GUILayer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 2 )
text = "Run time:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestTimeLabel" type="Label" parent="GUILayer/VBoxContainer"]
modulate = Color( 0, 0.94902, 0.415686, 1 )
margin_top = 50.0
margin_right = 1024.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 2 )
text = "Best time:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyKilledLabel" type="Label" parent="GUILayer/VBoxContainer"]
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 2 )
text = "Run time:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GUILayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.52269
margin_top = -48.7719
margin_right = 2.52271
margin_bottom = 3.22815
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewRunButton" type="Button" parent="GUILayer/HBoxContainer"]
margin_right = 510.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "New Run"
flat = true

[node name="QuitToMenuButton" type="Button" parent="GUILayer/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 52.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Quit to Menu"
flat = true

[node name="GameOverMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
pitch_scale = 0.7

[node name="VictoryMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
pitch_scale = 1.2
[connection signal="pressed" from="GUILayer/HBoxContainer/NewRunButton" to="." method="_on_NewRunButton_pressed"]
[connection signal="pressed" from="GUILayer/HBoxContainer/QuitToMenuButton" to="." method="_on_QuitToMenuButton_pressed"]
